--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -42,12 +42,12 @@
         margin-top: 20px;
     }
 
-    #find-info span:first-of-type {
+    #find-info span {
         margin-right: 15px;
         position: relative;
     }
 
-    #find-info span:first-of-type:after {
+    #find-info span:not(:last-of-type):after {
         width: 1px;
         height: 20px;
         position: absolute;
@@ -59,34 +59,34 @@
         cursor: default;
     }
 
-    .container{
+    .container {
         padding-left: 0;
     }
-    .body-form{
+
+    .body-form {
         background-image: url('/assets/img/mainimg/gangwon.jpg');
         background-size: cover;
         background-repeat: no-repeat;
-       }
+    }
 
     .body-form::before {
         position: absolute;
         content: "";
-        top:0px;
-        left:0px;
+        top: 0px;
+        left: 0px;
         width: 100%;
         height: 100%;
-        background-color: rgba(0,0,0,0.1);}
+        background-color: rgba(0, 0, 0, 0.1);
+    }
 
-    .login-form{
+    .login-form {
         margin-top: 10em;
         padding: 5em;
         border-radius: 30px;
         background-color: #ffffff;
-        background-color: rgba( 255, 255, 255, 0.9);
+        background-color: rgba(255, 255, 255, 0.9);
         width: 50%;
     }
-
-
 </style>
 
     <div class="w3-content w3-container w3-margin-top container position-relative pb-5">
